--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 24 17:42:18 PET 2025
-sdk.dir=C\:\\Users\\aldai\\AppData\\Local\\Android\\Sdk
+#Sat Oct 25 19:01:21 PET 2025
+sdk.dir=D\:\\CodeEditor__IDE\\Android_Studio_SDK\\Android\\Sdk
