--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Oct 26 10:54:49 PET 2025
-sdk.dir=C:/Users/aldai/AppData/Local/Android/Sdk
+#Mon Oct 27 15:01:29 PET 2025
+sdk.dir=D\:\\CodeEditor__IDE\\Android_Studio_SDK\\Android\\Sdk
