--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Oct 27 21:52:51 PET 2025
-sdk.dir=D\:\\CodeEditor__IDE\\Android_Studio_SDK\\Android\\Sdk
+#Tue Oct 28 19:56:30 PET 2025
+sdk.dir=C\:\\Users\\aldai\\AppData\\Local\\Android\\Sdk
